# Tensor

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  package.sh  setup.py
Tensor/: AccmulateType.cpp  AccmulateType.hpp  Accumulator.cpp  Accumulator.hpp  Activation.cpp  Activation.hpp  ActivationKernel.cpp  ActivationKernel.hpp  ActivationLayer.hpp  AffineGridGenerator.cpp  AffineGridGenerator.hpp  Allocator.cpp  Allocator.hpp  ArrayRef.cpp  ArrayRef.hpp  AutoBuffer.cpp  AutoBuffer.hpp  Avx_Math.cpp  Avx_Math.hpp  BatchNormalization.cpp  BatchNormalization.hpp  BatchNormalizationKernel.cpp  BatchNormalizationKernel.hpp  BatchNormalizationLayer.cpp  BatchNormalizationLayer.hpp  Benchmark.cpp  Benchmark.hpp  BinaryOps.cpp  BinaryOps.hpp  BinaryOpsKernel.cpp  BinaryOpsKernel.hpp  Blob.cpp  Blob.hpp  BoxPrediction.cpp  BoxPrediction.hpp  C++17.cpp  C++17.hpp  CMakeLists.txt  CPUAllocator.cpp  CPUAllocator.hpp  (+436 more)
Tensor.xcodeproj/: project.pbxproj
Tensor.xcodeproj/xcuserdata/chenjunhao.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Tensor.xcodeproj/xcuserdata/chenjunhao.xcuserdatad/xcschemes/: xcschememanagement.plist
benchmark/: CMakeLists.txt  benchotter.cpp  nanodet-m-1.5x-416-int8.otter  nanodet-plus-m-1.5x_416.otter  nanodet-plus-m-1.5x_416_fused.otter  nanodet-plus-m-1.5x_416_int8_fused.otter  nanodet-plus-m-1.5x_416_int8_mixed.otter  simplepose-opt.otter  simplepose.otter  simplepose_fused.otter
cmake/: otterConfig.cmake.in
examples/: CMakeLists.txt  Nanodet.cpp  PointRend.cpp  SimplePose.cpp  YoloFastest.cpp
python/: CMakeLists.txt  setup.py.i
python/otter/: __init__.py
python/src/: main.cpp  tensor_str.hpp
python/tests/: test_tensor.py
toolchains/: ios.toolchain.cmake
tools/: CMakeLists.txt
tools/ncnn/: CMakeLists.txt
tools/ncnn/src/: NcnntoOtterConverter.cpp  NcnntoOtterConverter.hpp  Otter.cpp  Otter.hpp  datareader.h  main.cpp  ncnn2otter.cpp  paramdict.cpp  paramdict.h
